--- a/Solubility.ipynb
+++ b/Solubility.ipynb
@@ -6,12 +6,12 @@
    "source": [
     "### Properties of inorganic chemical precursors\n",
     "\n",
-    "This Jupyter notebook cleans data imported from the CRC Handbook of Chemistry and Physics, 85th edition related to the solubility of various compounds. It then uses information about the periodic table of the elements to attempt to learn general rules about chemical solubility."
+    "This Jupyter notebook cleans data imported from the CRC Handbook of Chemistry and Physics, 85th edition related to the solubility of various compounds. It then attempts to learn general rules about chemical solubility."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -22,20 +22,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(2740, 11)"
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2740, 11)\n"
+     ]
     }
    ],
    "source": [
@@ -43,12 +40,12 @@
     "            'density', 'solubility_per_100gH2O', 'qualitative_solubility', 'blanks']\n",
     "df = pd.read_csv('tabula-Inorganic_solubility_with_lines.tsv', sep='\\t', names=colNames)\n",
     "df = df.drop(labels='blanks', axis=1)\n",
-    "df.shape"
+    "print(df.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -59,7 +56,7 @@
        "(2711, 11)"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -109,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -133,117 +130,122 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                name  solubility_per_100gH2O\n",
+      "20                 Aluminum chloride                    45.1\n",
+      "21     Aluminum chloride hexahydrate                    45.1\n",
+      "24                 Aluminum fluoride                     0.5\n",
+      "25     Aluminum fluoride monohydrate                     0.5\n",
+      "26      Aluminum fluoride trihydrate                     0.5\n",
+      "35                  Aluminum nitrate                    68.9\n",
+      "36      Aluminum nitrate nonahydrate                    68.9\n",
+      "44  Aluminum perchlorate nonahydrate                   182.0\n",
+      "51                  Aluminum sulfate                    38.5\n",
+      "52  Aluminum sulfate octadecahydrate                    38.5\n",
+      "(2681, 11)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df[['name', 'solubility_per_100gH2O']][df.solubility_per_100gH2O.notnull()].head(10))\n",
+    "print(df.shape)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we need to clean up the string names to make sure they all have ascii characters."
+    "Let's parse the qualitative solubility next. Where solubility is indicated, there is a marker (e.g. s for soluble, i for insoluble) followed by a list of solvents, then a semi-colon separator for listing other qualitative solubilities."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['H2O', 'acid', 'alk', 'EtOH', 'dil', 'HCl', 'bz', 'tol', 'CS2', 'ctc', 'chl', 'eth', 'xyl', 'ace', 'pyr', 'os', 'peth', 'MeOH', 'py', 'et', 'ct', 'conc', 'hc', 'bz.', 'HNO3', 'diox', 'hot', 'iodide', 'soln', '(exp)', 'NH4OH', 'cold', 'H', '2O', 'thf', 'aqua', 'regia', 'KCN', '2SO4', 'HOAc', 'CN', 'HF', 'NaOH', 'acids', 'KCNS', 'warm', 'NH', '4OH', 'CC4l', 'DMF', 'DMSO', 'sl', 'EtOh', 'reac', 'H2SO4', 'of', 'SO2', 'in', 'HF-HNO3', 'mixture', 'HNO3/HF', 'EtAc'])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def parse_qualsol(qs_str):\n",
+    "    '''Parse a qualitative solubility string\n",
+    "    '''\n",
+    "    sols = dict()\n",
+    "    for solubility in qs_str.split(';'): # First parse each solubility classifier\n",
+    "        items = solubility.strip().split(' ')\n",
+    "        qs = items[0]\n",
+    "        for solvent in items[1:]: # Then add each solvent\n",
+    "            solvent = solvent.strip(', ')\n",
+    "            sols[solvent] = qs\n",
+    "    return sols\n",
+    "            \n",
+    "qsseries = df.qualitative_solubility[df.qualitative_solubility.notnull()].apply(parse_qualsol)\n",
+    "td = dict()\n",
+    "for entry in qsseries:\n",
+    "    for key, value in entry.items():\n",
+    "        td.setdefault(key, []).append(value)\n",
+    "td.keys()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's find the qualitative solubilities with the most entries to see whether we have enough data points to do anything useful."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>solubility_per_100gH2O</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>Aluminum chloride</td>\n",
-       "      <td>45.1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>Aluminum chloride hexahydrate</td>\n",
-       "      <td>45.1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>Aluminum fluoride</td>\n",
-       "      <td>0.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>Aluminum fluoride monohydrate</td>\n",
-       "      <td>0.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>Aluminum fluoride trihydrate</td>\n",
-       "      <td>0.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>35</th>\n",
-       "      <td>Aluminum nitrate</td>\n",
-       "      <td>68.9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>36</th>\n",
-       "      <td>Aluminum nitrate nonahydrate</td>\n",
-       "      <td>68.9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>44</th>\n",
-       "      <td>Aluminum perchlorate nonahydrate</td>\n",
-       "      <td>182.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>51</th>\n",
-       "      <td>Aluminum sulfate</td>\n",
-       "      <td>38.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>52</th>\n",
-       "      <td>Aluminum sulfate octadecahydrate</td>\n",
-       "      <td>38.5</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                                name  solubility_per_100gH2O\n",
-       "20                 Aluminum chloride                    45.1\n",
-       "21     Aluminum chloride hexahydrate                    45.1\n",
-       "24                 Aluminum fluoride                     0.5\n",
-       "25     Aluminum fluoride monohydrate                     0.5\n",
-       "26      Aluminum fluoride trihydrate                     0.5\n",
-       "35                  Aluminum nitrate                    68.9\n",
-       "36      Aluminum nitrate nonahydrate                    68.9\n",
-       "44  Aluminum perchlorate nonahydrate                   182.0\n",
-       "51                  Aluminum sulfate                    38.5\n",
-       "52  Aluminum sulfate octadecahydrate                    38.5"
+       "[(1257, 'H2O'), (715, 'EtOH'), (367, 'acid'), (170, 'eth'), (132, 'dil')]"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[['name', 'solubility_per_100gH2O']][df.solubility_per_100gH2O.notnull()].head(10)"
+    "nEntries = []\n",
+    "for key, value in td.items():\n",
+    "    nEntries.append((len(value), key))\n",
+    "sorted(nEntries, reverse=True)[:5]"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It looks like water, ethanol, and acid solutions might have enough entries to do something interesting with. Let's create columns for each of those entries, with the qualitative solubility entered as an ordered categorical feature."
+   ]
   }
  ],
  "metadata": {
