Added plots and descriptive statistics of water solubility

--- a/Solubility.ipynb
+++ b/Solubility.ipynb
@@ -11,13 +11,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -131,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -152,13 +154,67 @@
       "44  Aluminum perchlorate nonahydrate                   182.0\n",
       "51                  Aluminum sulfate                    38.5\n",
       "52  Aluminum sulfate octadecahydrate                    38.5\n",
-      "(2681, 11)\n"
+      "(2681, 11)\n",
+      "      solubility_per_100gH2O                                     name\n",
+      "1065                  1308.0                       Indium(III) iodide\n",
+      "181                    987.0                   Antimony(III) chloride\n",
+      "1671                   709.0  Diphosphoric acid (pyrophosphoric acid)\n",
+      "590                    573.0                          Cesium fluoride\n",
+      "2102                   558.0        Silver(I) perchlorate monohydrate\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "count     735.000000\n",
+       "mean       72.683508\n",
+       "std       111.089021\n",
+       "min         0.000001\n",
+       "25%         1.085000\n",
+       "50%        37.000000\n",
+       "75%       101.000000\n",
+       "max      1308.000000\n",
+       "Name: solubility_per_100gH2O, dtype: float64"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "print(df[['name', 'solubility_per_100gH2O']][df.solubility_per_100gH2O.notnull()].head(10))\n",
-    "print(df.shape)"
+    "print(df.shape)\n",
+    "print(df[['solubility_per_100gH2O', 'name']].sort_values(by='solubility_per_100gH2O', ascending=False).head(5))\n",
+    "df.solubility_per_100gH2O.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYgAAAEOCAYAAACTqoDjAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAE11JREFUeJzt3X+0XWdd5/H3p63YXzY4tEaFalrTKWYmAuXyazpq0LpW\nsQbQQaFTlbA6zXQE8Udci6Co/DEudBz8UUBrtEyBgdZSEBNahh+zDDhOxzYtHVLoFGot2laBoqak\nFjqBr3+cfbsO1ye5+yZ3n3PPve/XWndl7+fsc873SW7u5z577/M8qSokSVrouGkXIElamQwISVKT\nASFJajIgJElNBoQkqcmAkCQ1GRCSpCYDQpLUZEBIkpoMCElS0wnTLuBYnH766bVhw4Zpl7EkDz/8\nMKeccsq0y5go+7w22OfZceuttz5YVWcsdtxMB8SGDRvYt2/ftMtYkr1797Jly5ZplzFR9nltsM+z\nI8mn+xznKSZJUpMBIUlqMiAkSU0GhCSpyYCQJDUZEJKkJgNCktQ0k5+DSLIV2Lpx48ZplyJpQjbs\nvGHaJQBw769eNO0SJmYmRxBVtaeqtq9bt27apUjSqjWTASFJGp4BIUlqMiAkSU0GhCSpyYCQJDUZ\nEJKkJgNCktRkQEiSmgwISVKTASFJajIgJElNBoQkqcmAkCQ1GRCSpCbXg5B0RH3XYdix+RDbVsia\nDVoeMzmCcD0ISRreTAaEJGl4BoQkqcmAkCQ1GRCSpCYDQpLUZEBIkpoMCElSkwEhSWoyICRJTQaE\nJKnJgJAkNRkQkqQmA0KS1GRASJKaDAhJUpMBIUlqMiAkSU0GhCSpyYCQJDUZEJKkJgNCktRkQEiS\nmk6YdgHzkrwQuAg4Dbiqqj4w5ZIkaU0bdASR5M1JPpvkjgXtFya5K8ndSXYCVNV7quoy4HLgxUPW\nJUla3NCnmK4GLhxvSHI88CbgecAm4OIkm8YOeU33uCRpigYNiKr6CPB3C5qfCdxdVfdU1aPAtcAL\nMvJrwPuq6rYh65IkLS5VNewbJBuA91bVv+72XwRcWFX/odv/MeBZwCeBlwK3ALdX1ZWHeb3twHaA\n9evXP/3aa68dtP7ldvDgQU499dRplzFR9nm27b//QK/j1p8En3lk4GJWgM1PXPfY9qz+Oz/3uc+9\ntarmFjtuxVykrqorgCt6HLcL2AUwNzdXW7ZsGbiy5bV3715mreZjZZ9n27adN/Q6bsfmQ7x+/4r5\nkTKYey/Z8tj2avp3bpnGba73A2eO7T+pa5MkrSDTCIhbgHOSnJXkccBLgN1TqEOSdARD3+Z6DXAT\ncG6S+5JcWlWHgFcA7wfuBK6rqo8v8XW3Jtl14EC/c6OSpKUb9IRhVV18mPYbgRuP4XX3AHvm5uYu\nO9rXkFa6DT3P/UtDcaoNSVKTASFJaprJgPAahCQNbyYDoqr2VNX2devWLX6wJOmozGRASJKGZ0BI\nkpoMCElSkwEhSWqayYDwLiZJGt5MBoR3MUnS8GYyICRJwzMgJElNBoQkqcmAkCQ1zWRAeBeTJA1v\nJgPCu5gkaXgzGRCSpOEZEJKkJgNCktQ06JrU0ixajrWgd2w+xDbXlNaMcwQhSWqayYDwNldJGt5M\nBoS3uUrS8GYyICRJwzMgJElNvQIiyeahC5EkrSx9RxC/k+TmJD+RxBP/krQG9AqIqvpO4BLgTODW\nJO9I8n2DViZJmqre1yCq6lPAa4BXAd8NXJHk/yX5oaGKkyRNT69PUif5DuBlwEXAB4GtVXVbkm8G\nbgLePVyJWiuW4xPMkpZP3xHEG4DbgKdU1cur6jaAqnqA0ahiovygnCQNr29AXAS8o6oeAUhyXJKT\nAarqbUMVdzh+UE6Shtc3ID4EnDS2f3LXJklapfoGxIlVdXB+p9s+eZiSJEkrQd+AeDjJefM7SZ4O\nPDJMSZKklaDvehA/DbwzyQNAgG8EXjxYVZKkqesVEFV1S5InA+d2TXdV1f8frixJ0rQtZUW5ZwAb\nuuecl4SqeusgVUmSpq7vB+XeBnwbcDvw5a65AANCklapviOIOWBTVdWQxUiSVo6+dzHdwejCtCRp\njeg7gjgd+ESSm4EvzTdW1fMHqWoRSbYCWzdu3DiNt5ekNaFvQLx2yCKWqqr2AHvm5uYum3YtkrRa\n9b3N9cNJvhU4p6o+1M3DdPywpUmSpqnvXUyXAduBf8HobqYnAlcC3ztcaZqkIafa3rH5ENucylua\nOX0vUr8cOB94CB5bPOgbhipKkjR9fQPiS1X16PxOkhMYfQ5CkrRK9Q2IDyf5eeCkbi3qdwJ7hitL\nkjRtfQNiJ/A5YD/wH4EbmcJKcpKkyel7F9NXgN/vviRJa0Dfu5j+ksY1h6o6e9krkiStCEuZi2ne\nicAPM7rlVZK0SvW6BlFVnx/7ur+qfgu4aODaJElT1PcU03lju8cxGlEsZS0JSdKM6ftD/vVj24eA\ne4EfWfZqJEkrRt+7mJ47dCGSpJWl7ymmnz3S41X1G8tTjiRppVjKXUzPAHZ3+1uBm4FPDVHUYlbT\nehBDTpInSceib0A8CTivqr4AkOS1wA1V9aNDFXYkrgchScPrO9XGeuDRsf1HuzZJ0irVdwTxVuDm\nJH/U7b8QeMswJUmSVoK+dzH9SpL3Ad/ZNb2sqj46XFmSpGnre4oJ4GTgoar6beC+JGcNVJMkaQXo\nFRBJfhl4FfDqrulrgP8+VFGSpOnrO4L4QeD5wMMAVfUA8HVDFSVJmr6+AfFoVRXdlN9JThmuJEnS\nStA3IK5L8nvA45NcBnwIFw+SpFWt711M/7Vbi/oh4Fzgl6rqg4NWJkmaqkUDIsnxwIe6CfsMBUla\nIxY9xVRVXwa+kmTdBOqRJK0QfT9JfRDYn+SDdHcyAVTVKwepSpI0dX0D4t3dlyRpjThiQCT5lqr6\nq6py3iVJWmMWuwbxnvmNJO8auBZJ0gqyWEBkbPvsIQuRJK0siwVEHWZbkrTKLXaR+ilJHmI0kjip\n26bbr6o6bdDqJElTc8SAqKrjJ1WIJGllWcp6EJKkNcSAkCQ1GRCSpKYVExBJzk5yVZLrp12LJGng\ngEjy5iSfTXLHgvYLk9yV5O4kOwGq6p6qunTIeiRJ/Q09grgauHC8oZs+/E3A84BNwMVJNg1chyRp\niQYNiKr6CPB3C5qfCdzdjRgeBa4FXjBkHZKkpes7m+tyeiLw12P79wHPSvIE4FeApyV5dVW9rvXk\nJNuB7QDr169n7969A5e7vA4ePPhVNe/YfGh6xUzI+pPWRj/H2efVa/z/78L/z6vNNAKiqao+D1ze\n47hdwC6Aubm52rJly8CVLa+9e/cyXvO2nTdMr5gJ2bH5EK/fv2K+1SbCPq9e916y5bHthf+fV5tp\n3MV0P3Dm2P6TujZJ0goyjYC4BTgnyVlJHge8BNg9hTokSUcw9G2u1wA3AecmuS/JpVV1CHgF8H7g\nTuC6qvr4El93a5JdBw4cWP6iJUnAwNcgquriw7TfCNx4DK+7B9gzNzd32dG+hiTpyFbMJ6klSSuL\nASFJaprJgPAahCQNbyYDoqr2VNX2devWTbsUSVq1ZjIgJEnDMyAkSU0GhCSpyYCQJDXNZEB4F5Mk\nDW8mA8K7mCRpeDMZEJKk4RkQkqQmA0KS1GRASJKaZjIgvItJkoY3kwHhXUySNLyZDAhJ0vAMCElS\nkwEhSWoyICRJTQaEJKnphGkXcDSSbAW2bty48ahfY8POG5avoCXYsfkQ26b03pK0FDM5gvA2V0ka\n3kwGhCRpeAaEJKnJgJAkNRkQkqQmA0KS1GRASJKaDAhJUtNMBoTrQUjS8GYyIPygnCQNbyYDQpI0\nPANCktRkQEiSmgwISVKTASFJajIgJElNBoQkqcmAkCQ1GRCSpKaZDAin2pCk4c1kQDjVhiQNbyYD\nQpI0PANCktRkQEiSmgwISVKTASFJajIgJElNBoQkqcmAkCQ1GRCSpCYDQpLUZEBIkpoMCElSkwEh\nSWoyICRJTSdMu4CjkWQrsHXjxo3TLkXSGrNh5w2Pbe/YfIhtY/uTcu+vXjSR95nJEYTrQUjS8GYy\nICRJwzMgJElNBoQkqcmAkCQ1GRCSpCYDQpLUZEBIkpoMCElSU6pq2jUctSSfAz7d7a4DDiw4ZGFb\n65hJOx14sMdxfWq1z+22Welz3zrXWp8Pd8xa7/Ny9vdbq+qMRY+qqlXxBexarK11zBTq3He0/bHP\nq6vPfetca30+3DFrvc/T6O9qOsW0p0db65iVqk+t9rndNit97lvnWuvz4Y5Z632eeH9n+hTTLEqy\nr6rmpl3HJNnntcE+rz6raQQxK3ZNu4ApsM9rg31eZRxBSJKaHEFIkpoMCElSkwEhSWoyIFaQJFuS\n/GmSK5NsmXY9k5Dk27v+Xp/kP027nklIcnaSq5JcP+1ahrRW+jlutX0/GxDLJMmbk3w2yR0L2i9M\ncleSu5PsXORlCjgInAjcN1Sty2U5+lxVd1bV5cCPAOcPWe9yWKY+31NVlw5b6TCW0v9Z7ue4JfZ5\npr6fFzXtTyKuli/gu4DzgDvG2o4H/gI4G3gc8H+BTcBm4L0Lvr4BOK573nrg7dPu0yT63D3n+cD7\ngH8/7T5Nqs/d866fdn+G7P8s9/NY+jxL38+LfZ3QO0l0RFX1kSQbFjQ/E7i7qu4BSHIt8IKqeh3w\nA0d4ub8HvnaIOpfTcvW5qnYDu5PcALxjuIqP3TL/O8+cpfQf+MRkqxvGUvs8S9/Pi/EU07CeCPz1\n2P59XVtTkh9K8nvA24A3DlzbUJba5y1Jruj6fePQxQ1kqX1+QpIrgaclefXQxU1As/+rsJ/jDtfn\n1fD9/BhHECtIVb0bePe065ikqtoL7J1yGRNVVZ8HLp92HUNbK/0ct9q+nx1BDOt+4Myx/Sd1bauZ\nfV4bfR63Fvu/JvpsQAzrFuCcJGcleRzwEmD3lGsamn1eG30etxb7vyb6bEAskyTXADcB5ya5L8ml\nVXUIeAXwfuBO4Lqq+vg061xO9nlt9HncWuz/WuzzPCfrkyQ1OYKQJDUZEJKkJgNCktRkQEiSmgwI\nSVKTASFJajIgNFFJfiHJx5N8LMntSZ61yPF7k8wtcszVSV7UaJ9LckW3vS3JG7vty5P8+Fj7Nx99\nj45dkv+R5B+SvHdB+1lJ/rybTvoPuw9kkZEruvaPJTlvie/32iQ/t6Dt3iSnJzkzyZ8k+UT37/RT\nY8ckyWuSfCrJJ7vj/tWx9F0rmwGhiUnyHEazm55XVd8BXMBXT3i2rKpqX1W9stF+ZVW9tdvdBkws\nIJK05j/7deDHGu2/BvxmVW1kNMPv/NoKzwPO6b62A7+7jCUeAnZU1Sbg2cDLk2zqHns58G+Ap1TV\nvwRex2jW0hOX8f21ghgQmqRvAh6sqi8BVNWDVfUAQJLvTfLRJPu7BVr+2XTnSQ6Obb8oydVjD1+Q\nZF/3m+0PdMdsWfhbedf+2iQ/14065oC3d6OZi5K8Z+y470vyR43n35vkv3S13pxkY9d+RpJ3Jbml\n+zp/7P3eluTPGM3U+1Wq6n8CX1jwHgG+B5hfje0twAu77RcAb62R/wM8Psk3dc/7xYwWsflfSa5Z\nOFJYTFX9TVXd1m1/gdGnhOdnpn0V8Iqq+sfu8Q8A/xu4ZCnvodlhQGiSPgCc2f0Q/50k3w3Q/QZ6\nNfDiqtrMaJbhpS7XuIHRHP0XAVf2+a22qq4H9gGXVNVTGU3P/OQkZ3SHvAx482GefqCr9Y3Ab3Vt\nv83oN/5nAP8O+IOx4zcBF1TVxT378wTgH7opHeCrpxA/3FTT8+/7FEajjCOdmvuZLhRvT3I7jVFU\nRmsgPA348ySnAafMr38wZh/gaaZVyoDQxFTVQeDpjE6LfA74wyTbgHOBv6yqT3aHvoXRKl5LcV1V\nfaWqPgXcAzz5KOorRr/h/2iSxwPPYbQyWMs1Y38+p9u+AHhj9wN3N3BaklO7x3ZX1SNLrWmJzgf+\nuKq+2P32v+cIx/5mVT11/gt4YPzBru53AT9dVQ8NV7JWMteD0ERV1ZcZzZe/N8l+4KXAR/s+fWx7\n4Qhh4aRiRzvJ2H9j9IP1i8A7x36DP1It89vHAc+uqi+OHzg6W8TDS6zj84xOHZ3Q1TA+nfSgU00n\n+RpG4fD2bo0SquqhJA8nOXvBKOLpwIeX6721sjiC0MQkOTfJOWNNTwU+DdwFbJg/l8/ogm3rh85n\nknx7kuOAH1zw2A8nOS7JtzFaJ/iunmV9Afi6+Z3umsgDwGsYhcXhvHjsz5u67Q8APzl/QJKn9qzh\nn+lGM38CzN+d9VLgj7vt3cCPd3cVPZvR6a6/Af4M2JrkxG4EsOTlTrtrH1cBd1bVbyx4+NeBK5Kc\n1B17AfBvmfFlNXV4jiA0SacCb+hO3xwC7ga2V9UXk7wMeGd3l88twJWN5+8E3svo9NS+7vXm/RVw\nM3AacHn3mn1quprRNYtHgOd0p4HeDpxRVXce4Xlfn+RjwJeA+esKrwTe1LWfAHyEHiuqJflTRqfE\nTk1yH3BpVb2f0UXha5P8Z0ajrKu6p9wIfD+jv79/ZHSthKq6Jclu4GPAZ4D9wIE+fwljzmcU0Pu7\nU2UAP19VNwJvAL6+e+zLwN8yWnt76FNnmhKn+5YWyOjzEh+tqqsO8/i9wFxVPTjRwnpIcmpVHUxy\nMqOA2j5/V5K0VI4gpDFJbmV0vWDHtGs5Sru6zy2cCLzFcNCxcAQhSWryIrUkqcmAkCQ1GRCSpCYD\nQpLUZEBIkpoMCElS0z8B4JovgHB/kIIAAAAASUVORK5CYII=\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x7f4968e5ce48>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "log_bins = np.logspace(-6, 4, num=10)\n",
+    "df.solubility_per_100gH2O.hist(bins=log_bins)\n",
+    "plt.xscale('log')\n",
+    "plt.yscale('log')\n",
+    "plt.xlabel('Solubility per 100g H2O')\n",
+    "plt.ylabel('Frequency')\n",
+    "plt.show()"
    ]
   },
   {
@@ -246,6 +302,15 @@
    "source": [
     "It looks like water, ethanol, and acid solutions might have enough entries to do something interesting with. Let's create columns for each of those entries, with the qualitative solubility entered as an ordered categorical feature."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
