resaved solubility notebook

--- a/Solubility.ipynb
+++ b/Solubility.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
@@ -58,7 +58,7 @@
        "(2711, 11)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -177,7 +177,7 @@
        "Name: solubility_per_100gH2O, dtype: float64"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,16 +191,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
      "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYgAAAEOCAYAAACTqoDjAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAE11JREFUeJzt3X+0XWdd5/H3p63YXzY4tEaFalrTKWYmAuXyazpq0LpW\nsQbQQaFTlbA6zXQE8Udci6Co/DEudBz8UUBrtEyBgdZSEBNahh+zDDhOxzYtHVLoFGot2laBoqak\nFjqBr3+cfbsO1ye5+yZ3n3PPve/XWndl7+fsc873SW7u5z577/M8qSokSVrouGkXIElamQwISVKT\nASFJajIgJElNBoQkqcmAkCQ1GRCSpCYDQpLUZEBIkpoMCElS0wnTLuBYnH766bVhw4Zpl7EkDz/8\nMKeccsq0y5go+7w22OfZceuttz5YVWcsdtxMB8SGDRvYt2/ftMtYkr1797Jly5ZplzFR9nltsM+z\nI8mn+xznKSZJUpMBIUlqMiAkSU0GhCSpyYCQJDUZEJKkJgNCktQ0k5+DSLIV2Lpx48ZplyJpQjbs\nvGHaJQBw769eNO0SJmYmRxBVtaeqtq9bt27apUjSqjWTASFJGp4BIUlqMiAkSU0GhCSpyYCQJDUZ\nEJKkJgNCktRkQEiSmgwISVKTASFJajIgJElNBoQkqcmAkCQ1GRCSpCbXg5B0RH3XYdix+RDbVsia\nDVoeMzmCcD0ISRreTAaEJGl4BoQkqcmAkCQ1GRCSpCYDQpLUZEBIkpoMCElSkwEhSWoyICRJTQaE\nJKnJgJAkNRkQkqQmA0KS1GRASJKaDAhJUpMBIUlqMiAkSU0GhCSpyYCQJDUZEJKkJgNCktRkQEiS\nmk6YdgHzkrwQuAg4Dbiqqj4w5ZIkaU0bdASR5M1JPpvkjgXtFya5K8ndSXYCVNV7quoy4HLgxUPW\nJUla3NCnmK4GLhxvSHI88CbgecAm4OIkm8YOeU33uCRpigYNiKr6CPB3C5qfCdxdVfdU1aPAtcAL\nMvJrwPuq6rYh65IkLS5VNewbJBuA91bVv+72XwRcWFX/odv/MeBZwCeBlwK3ALdX1ZWHeb3twHaA\n9evXP/3aa68dtP7ldvDgQU499dRplzFR9nm27b//QK/j1p8En3lk4GJWgM1PXPfY9qz+Oz/3uc+9\ntarmFjtuxVykrqorgCt6HLcL2AUwNzdXW7ZsGbiy5bV3715mreZjZZ9n27adN/Q6bsfmQ7x+/4r5\nkTKYey/Z8tj2avp3bpnGba73A2eO7T+pa5MkrSDTCIhbgHOSnJXkccBLgN1TqEOSdARD3+Z6DXAT\ncG6S+5JcWlWHgFcA7wfuBK6rqo8v8XW3Jtl14EC/c6OSpKUb9IRhVV18mPYbgRuP4XX3AHvm5uYu\nO9rXkFa6DT3P/UtDcaoNSVKTASFJaprJgPAahCQNbyYDoqr2VNX2devWLX6wJOmozGRASJKGZ0BI\nkpoMCElSkwEhSWqayYDwLiZJGt5MBoR3MUnS8GYyICRJwzMgJElNBoQkqcmAkCQ1zWRAeBeTJA1v\nJgPCu5gkaXgzGRCSpOEZEJKkJgNCktQ06JrU0ixajrWgd2w+xDbXlNaMcwQhSWqayYDwNldJGt5M\nBoS3uUrS8GYyICRJwzMgJElNvQIiyeahC5EkrSx9RxC/k+TmJD+RxBP/krQG9AqIqvpO4BLgTODW\nJO9I8n2DViZJmqre1yCq6lPAa4BXAd8NXJHk/yX5oaGKkyRNT69PUif5DuBlwEXAB4GtVXVbkm8G\nbgLePVyJWiuW4xPMkpZP3xHEG4DbgKdU1cur6jaAqnqA0ahiovygnCQNr29AXAS8o6oeAUhyXJKT\nAarqbUMVdzh+UE6Shtc3ID4EnDS2f3LXJklapfoGxIlVdXB+p9s+eZiSJEkrQd+AeDjJefM7SZ4O\nPDJMSZKklaDvehA/DbwzyQNAgG8EXjxYVZKkqesVEFV1S5InA+d2TXdV1f8frixJ0rQtZUW5ZwAb\nuuecl4SqeusgVUmSpq7vB+XeBnwbcDvw5a65AANCklapviOIOWBTVdWQxUiSVo6+dzHdwejCtCRp\njeg7gjgd+ESSm4EvzTdW1fMHqWoRSbYCWzdu3DiNt5ekNaFvQLx2yCKWqqr2AHvm5uYum3YtkrRa\n9b3N9cNJvhU4p6o+1M3DdPywpUmSpqnvXUyXAduBf8HobqYnAlcC3ztcaZqkIafa3rH5ENucylua\nOX0vUr8cOB94CB5bPOgbhipKkjR9fQPiS1X16PxOkhMYfQ5CkrRK9Q2IDyf5eeCkbi3qdwJ7hitL\nkjRtfQNiJ/A5YD/wH4EbmcJKcpKkyel7F9NXgN/vviRJa0Dfu5j+ksY1h6o6e9krkiStCEuZi2ne\nicAPM7rlVZK0SvW6BlFVnx/7ur+qfgu4aODaJElT1PcU03lju8cxGlEsZS0JSdKM6ftD/vVj24eA\ne4EfWfZqJEkrRt+7mJ47dCGSpJWl7ymmnz3S41X1G8tTjiRppVjKXUzPAHZ3+1uBm4FPDVHUYlbT\nehBDTpInSceib0A8CTivqr4AkOS1wA1V9aNDFXYkrgchScPrO9XGeuDRsf1HuzZJ0irVdwTxVuDm\nJH/U7b8QeMswJUmSVoK+dzH9SpL3Ad/ZNb2sqj46XFmSpGnre4oJ4GTgoar6beC+JGcNVJMkaQXo\nFRBJfhl4FfDqrulrgP8+VFGSpOnrO4L4QeD5wMMAVfUA8HVDFSVJmr6+AfFoVRXdlN9JThmuJEnS\nStA3IK5L8nvA45NcBnwIFw+SpFWt711M/7Vbi/oh4Fzgl6rqg4NWJkmaqkUDIsnxwIe6CfsMBUla\nIxY9xVRVXwa+kmTdBOqRJK0QfT9JfRDYn+SDdHcyAVTVKwepSpI0dX0D4t3dlyRpjThiQCT5lqr6\nq6py3iVJWmMWuwbxnvmNJO8auBZJ0gqyWEBkbPvsIQuRJK0siwVEHWZbkrTKLXaR+ilJHmI0kjip\n26bbr6o6bdDqJElTc8SAqKrjJ1WIJGllWcp6EJKkNcSAkCQ1GRCSpKYVExBJzk5yVZLrp12LJGng\ngEjy5iSfTXLHgvYLk9yV5O4kOwGq6p6qunTIeiRJ/Q09grgauHC8oZs+/E3A84BNwMVJNg1chyRp\niQYNiKr6CPB3C5qfCdzdjRgeBa4FXjBkHZKkpes7m+tyeiLw12P79wHPSvIE4FeApyV5dVW9rvXk\nJNuB7QDr169n7969A5e7vA4ePPhVNe/YfGh6xUzI+pPWRj/H2efVa/z/78L/z6vNNAKiqao+D1ze\n47hdwC6Aubm52rJly8CVLa+9e/cyXvO2nTdMr5gJ2bH5EK/fv2K+1SbCPq9e916y5bHthf+fV5tp\n3MV0P3Dm2P6TujZJ0goyjYC4BTgnyVlJHge8BNg9hTokSUcw9G2u1wA3AecmuS/JpVV1CHgF8H7g\nTuC6qvr4El93a5JdBw4cWP6iJUnAwNcgquriw7TfCNx4DK+7B9gzNzd32dG+hiTpyFbMJ6klSSuL\nASFJaprJgPAahCQNbyYDoqr2VNX2devWTbsUSVq1ZjIgJEnDMyAkSU0GhCSpyYCQJDXNZEB4F5Mk\nDW8mA8K7mCRpeDMZEJKk4RkQkqQmA0KS1GRASJKaZjIgvItJkoY3kwHhXUySNLyZDAhJ0vAMCElS\nkwEhSWoyICRJTQaEJKnphGkXcDSSbAW2bty48ahfY8POG5avoCXYsfkQ26b03pK0FDM5gvA2V0ka\n3kwGhCRpeAaEJKnJgJAkNRkQkqQmA0KS1GRASJKaDAhJUtNMBoTrQUjS8GYyIPygnCQNbyYDQpI0\nPANCktRkQEiSmgwISVKTASFJajIgJElNBoQkqcmAkCQ1GRCSpKaZDAin2pCk4c1kQDjVhiQNbyYD\nQpI0PANCktRkQEiSmgwISVKTASFJajIgJElNBoQkqcmAkCQ1GRCSpCYDQpLUZEBIkpoMCElSkwEh\nSWoyICRJTSdMu4CjkWQrsHXjxo3TLkXSGrNh5w2Pbe/YfIhtY/uTcu+vXjSR95nJEYTrQUjS8GYy\nICRJwzMgJElNBoQkqcmAkCQ1GRCSpCYDQpLUZEBIkpoMCElSU6pq2jUctSSfAz7d7a4DDiw4ZGFb\n65hJOx14sMdxfWq1z+22Welz3zrXWp8Pd8xa7/Ny9vdbq+qMRY+qqlXxBexarK11zBTq3He0/bHP\nq6vPfetca30+3DFrvc/T6O9qOsW0p0db65iVqk+t9rndNit97lvnWuvz4Y5Z632eeH9n+hTTLEqy\nr6rmpl3HJNnntcE+rz6raQQxK3ZNu4ApsM9rg31eZRxBSJKaHEFIkpoMCElSkwEhSWoyIFaQJFuS\n/GmSK5NsmXY9k5Dk27v+Xp/kP027nklIcnaSq5JcP+1ahrRW+jlutX0/GxDLJMmbk3w2yR0L2i9M\ncleSu5PsXORlCjgInAjcN1Sty2U5+lxVd1bV5cCPAOcPWe9yWKY+31NVlw5b6TCW0v9Z7ue4JfZ5\npr6fFzXtTyKuli/gu4DzgDvG2o4H/gI4G3gc8H+BTcBm4L0Lvr4BOK573nrg7dPu0yT63D3n+cD7\ngH8/7T5Nqs/d866fdn+G7P8s9/NY+jxL38+LfZ3QO0l0RFX1kSQbFjQ/E7i7qu4BSHIt8IKqeh3w\nA0d4ub8HvnaIOpfTcvW5qnYDu5PcALxjuIqP3TL/O8+cpfQf+MRkqxvGUvs8S9/Pi/EU07CeCPz1\n2P59XVtTkh9K8nvA24A3DlzbUJba5y1Jruj6fePQxQ1kqX1+QpIrgaclefXQxU1As/+rsJ/jDtfn\n1fD9/BhHECtIVb0bePe065ikqtoL7J1yGRNVVZ8HLp92HUNbK/0ct9q+nx1BDOt+4Myx/Sd1bauZ\nfV4bfR63Fvu/JvpsQAzrFuCcJGcleRzwEmD3lGsamn1eG30etxb7vyb6bEAskyTXADcB5ya5L8ml\nVXUIeAXwfuBO4Lqq+vg061xO9nlt9HncWuz/WuzzPCfrkyQ1OYKQJDUZEJKkJgNCktRkQEiSmgwI\nSVKTASFJajIgNFFJfiHJx5N8LMntSZ61yPF7k8wtcszVSV7UaJ9LckW3vS3JG7vty5P8+Fj7Nx99\nj45dkv+R5B+SvHdB+1lJ/rybTvoPuw9kkZEruvaPJTlvie/32iQ/t6Dt3iSnJzkzyZ8k+UT37/RT\nY8ckyWuSfCrJJ7vj/tWx9F0rmwGhiUnyHEazm55XVd8BXMBXT3i2rKpqX1W9stF+ZVW9tdvdBkws\nIJK05j/7deDHGu2/BvxmVW1kNMPv/NoKzwPO6b62A7+7jCUeAnZU1Sbg2cDLk2zqHns58G+Ap1TV\nvwRex2jW0hOX8f21ghgQmqRvAh6sqi8BVNWDVfUAQJLvTfLRJPu7BVr+2XTnSQ6Obb8oydVjD1+Q\nZF/3m+0PdMdsWfhbedf+2iQ/14065oC3d6OZi5K8Z+y470vyR43n35vkv3S13pxkY9d+RpJ3Jbml\n+zp/7P3eluTPGM3U+1Wq6n8CX1jwHgG+B5hfje0twAu77RcAb62R/wM8Psk3dc/7xYwWsflfSa5Z\nOFJYTFX9TVXd1m1/gdGnhOdnpn0V8Iqq+sfu8Q8A/xu4ZCnvodlhQGiSPgCc2f0Q/50k3w3Q/QZ6\nNfDiqtrMaJbhpS7XuIHRHP0XAVf2+a22qq4H9gGXVNVTGU3P/OQkZ3SHvAx482GefqCr9Y3Ab3Vt\nv83oN/5nAP8O+IOx4zcBF1TVxT378wTgH7opHeCrpxA/3FTT8+/7FEajjCOdmvuZLhRvT3I7jVFU\nRmsgPA348ySnAafMr38wZh/gaaZVyoDQxFTVQeDpjE6LfA74wyTbgHOBv6yqT3aHvoXRKl5LcV1V\nfaWqPgXcAzz5KOorRr/h/2iSxwPPYbQyWMs1Y38+p9u+AHhj9wN3N3BaklO7x3ZX1SNLrWmJzgf+\nuKq+2P32v+cIx/5mVT11/gt4YPzBru53AT9dVQ8NV7JWMteD0ERV1ZcZzZe/N8l+4KXAR/s+fWx7\n4Qhh4aRiRzvJ2H9j9IP1i8A7x36DP1It89vHAc+uqi+OHzg6W8TDS6zj84xOHZ3Q1TA+nfSgU00n\n+RpG4fD2bo0SquqhJA8nOXvBKOLpwIeX6721sjiC0MQkOTfJOWNNTwU+DdwFbJg/l8/ogm3rh85n\nknx7kuOAH1zw2A8nOS7JtzFaJ/iunmV9Afi6+Z3umsgDwGsYhcXhvHjsz5u67Q8APzl/QJKn9qzh\nn+lGM38CzN+d9VLgj7vt3cCPd3cVPZvR6a6/Af4M2JrkxG4EsOTlTrtrH1cBd1bVbyx4+NeBK5Kc\n1B17AfBvmfFlNXV4jiA0SacCb+hO3xwC7ga2V9UXk7wMeGd3l88twJWN5+8E3svo9NS+7vXm/RVw\nM3AacHn3mn1quprRNYtHgOd0p4HeDpxRVXce4Xlfn+RjwJeA+esKrwTe1LWfAHyEHiuqJflTRqfE\nTk1yH3BpVb2f0UXha5P8Z0ajrKu6p9wIfD+jv79/ZHSthKq6Jclu4GPAZ4D9wIE+fwljzmcU0Pu7\nU2UAP19VNwJvAL6+e+zLwN8yWnt76FNnmhKn+5YWyOjzEh+tqqsO8/i9wFxVPTjRwnpIcmpVHUxy\nMqOA2j5/V5K0VI4gpDFJbmV0vWDHtGs5Sru6zy2cCLzFcNCxcAQhSWryIrUkqcmAkCQ1GRCSpCYD\nQpLUZEBIkpoMCElS0z8B4JovgHB/kIIAAAAASUVORK5CYII=\n",
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYgAAAEOCAYAAACTqoDjAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAE4ZJREFUeJzt3X+0ZWV93/H3ByYGZGRMApmmSDOQIeg0Ew1co5SmGVJc\nxZJRk5goJT9wUaa0GpuWrJWJoQ1/NEvSNDFBTXAqBjWGCaIxM0Cq0pXRNLWBoVoHpURqxgRIVWwz\nOIjSwW//OPtmHa/P3HvuzN1333Pv+7XWWbP3c/Y55/vM3Lmf8+wfz05VIUnSXCcMXYAkaWUyICRJ\nTQaEJKnJgJAkNRkQkqQmA0KS1GRASJKaDAhJUpMBIUlqMiAkSU3rhi7geJx22mm1adOmoctYlMcf\nf5xTTjll6DKWlX1eG+zz9Lj33nsfrarTF9puqgNi06ZN7N+/f+gyFmXfvn1s27Zt6DKWlX1eG+zz\n9EjymUm2cxeTJKnJgJAkNRkQkqQmA0KS1GRASJKaDAhJUpMBIUlqmurrICStTZt23nFcrz94/aVL\nVMnq5ghCktRkQEiSmqYyIJJsT7Lr0KFDQ5ciSavWVAZEVe2tqh0bNmwYuhRJWrWmMiAkSf0zICRJ\nTQaEJKnJgJAkNRkQkqQmA0KS1ORUG5KW3fFOlaHl4QhCktRkQEiSmgwISVKTASFJajIgJElNBoQk\nqcmAkCQ1GRCSpCYDQpLUZEBIkpoMCElSkwEhSWoyICRJTQaEJKnJgJAkNRkQkqQmA0KS1LRi7iiX\n5GXApcCpwE1V9YGBS5KkNa3XEUSStyX5XJL75rRfkuSBJA8m2QlQVe+rqquAq4FX9FmXJGlhfe9i\nuhm4ZLwhyYnAm4EXA1uAy5JsGdvk2u55SdKAUlX9fkCyCbi9qr6rW78AuK6q/lG3/vPdptd3jw9W\n1V3zvN8OYAfAxo0bz9+9e3d/xffg8OHDrF+/fugylpV9XhsW0+cDDx/quZr5bT1jw5K8z7T+O190\n0UX3VtXMQtsNcQziDOAvx9YfAl4A/DRwMbAhyeaqurH14qraBewCmJmZqW3btvVb7RLbt28f01bz\n8bLPa8Ni+nzFzjv6LWYBBy/ftiTvs9r/nVfMQeqqugG4Yeg6JEkjQ5zm+jBw5tj6s7o2SdIKMkRA\n3AOck+SsJE8DXgnsGaAOSdI8+j7N9RbgI8C5SR5KcmVVHQFeA7wfuB+4tao+scj33Z5k16FDwx7o\nkqTVrNdjEFV12VHa7wTuPI733QvsnZmZuepY30OSND+n2pAkNRkQkqQmA0KS1DSVAeFBaknq31QG\nRFXtraodGzYszeXykqSvN5UBIUnqnwEhSWpaMXMxSZoemxqT7V2z9cjgk/BpaTmCkCQ1TWVAeBaT\nJPVvKgPCs5gkqX9TGRCSpP4ZEJKkJgNCktRkQEiSmqYyIDyLSZL6N5UB4VlMktS/qQwISVL/DAhJ\nUpMBIUlqMiAkSU0GhCSpyYCQJDVNZUB4HYQk9W8qA8LrICSpf1MZEJKk/hkQkqQmA0KS1LRu6AIk\nLd6mnXcMXYLWAEcQkqQmA0KS1GRASJKapjIgvFBOkvo3lQHhhXKS1L+pDAhJUv8MCElS00QBkWRr\n34VIklaWSUcQv5nk7iT/Iok7/iVpDZgoIKrq+4DLgTOBe5P8bpIX9VqZJGlQEx+DqKpPAdcCPwd8\nP3BDkv+Z5If7Kk6SNJxJj0F8d5I3APcDPwBsr6rndMtv6LE+SdJAJp2s743AW4HXVdUTs41V9UiS\na3upTJI0qEkD4lLgiap6CiDJCcBJVfWlqnpnb9VJkgYz6TGIu4CTx9af3rVJklapSUcQJ1XV4dmV\nqjqc5Ok91bSgJNuB7Zs3bx6qBOm4eD8HTYNJRxCPJzlvdiXJ+cAT82zfK+dikqT+TTqC+Bng3Uke\nAQL8LeAVvVUlSRrcRAFRVfckeTZwbtf0QFX9v/7KkqT+HO8uvoPXX7pElaxsi7kn9fOBTd1rzktC\nVb2jl6okSYObKCCSvBP4DuBjwFNdcwEGhCStUpOOIGaALVVVfRYjSVo5Jj2L6T5GB6YlSWvEpCOI\n04BPJrkb+MpsY1W9pJeqpBVuoYOc12w9whVe66ApN2lAXNdnEZKklWfS01w/lOTbgXOq6q7uKuoT\n+y1N6o9XMksLm3S676uA24C3dE1nAO/rqyhJ0vAmPUj9auBC4DH4m5sHfWtfRUmShjdpQHylqp6c\nXUmyjtF1EJKkVWrSgPhQktcBJ3f3on43sLe/siRJQ5s0IHYCnwcOAP8MuJPR/aklSavUpGcxfRX4\nj91DkrQGTDoX05/TOOZQVWcveUWSpBVhMXMxzToJ+FHgm5e+nMl4RzlJ6t9ExyCq6gtjj4er6teB\nwSZE945yktS/SXcxnTe2egKjEcVi7iUhfQ2vZJZWvkl/yf/q2PIR4CDwY0tejSRpxZj0LKaL+i5E\nkrSyTLqL6V/P93xV/drSlCNJWikWcxbT84E93fp24G7gU30UJUka3qQB8SzgvKr6IkCS64A7qurH\n+ypMkjSsSafa2Ag8Obb+ZNcmSVqlJh1BvAO4O8nvd+svA97eT0mSpJVg0rOYfinJHwLf1zW9qqo+\n2l9ZkqShTbqLCeDpwGNV9RvAQ0nO6qkmSdIKMOlprr/I6Eymc4HfBr4B+B1Gd5nTAI73SuSD1w82\nU4qkKTHpCOKHgJcAjwNU1SPAM/oqSpI0vEkD4smqKropv5Oc0l9JkqSVYNKAuDXJW4BnJrkKuAtv\nHiRJq9qkZzH9h+5e1I8xOg7xb6vqg71WJkka1IIBkeRE4K5uwj5DQZLWiAUDoqqeSvLVJBuq6tBy\nFKWVbzFnUV2z9QhXeP8HaepMeiX1YeBAkg/SnckEUFWv7aUqSdLgJg2I93YPSdIaMW9AJPk7VfUX\nVeW8S5K0xix0muv7ZheSvKfnWiRJK8hCAZGx5bP7LESStLIsFBB1lGVJ0iq30EHq5yZ5jNFI4uRu\nmW69qurUpSokydnALwAbqurlS/W+kqRjM+8IoqpOrKpTq+oZVbWuW55dXzAckrwtyeeS3Den/ZIk\nDyR5MMnO7rM+XVVXHl93JElLZTH3gzgWNwOXjDd0V2a/GXgxsAW4LMmWnuuQJC1SrwFRVR8G/s+c\n5u8FHuxGDE8Cu4GX9lmHJGnxMprFu8cPSDYBt1fVd3XrLwcuqap/2q3/BPAC4BeBXwJeBLy1ql5/\nlPfbAewA2Lhx4/m7d+/utf6ldvjwYdavX3/c73Pg4emZ9WTjyfDZJ4auYnnZ59Vt6xkbgKX7/7zc\nLrroonuramah7Sa9krp3VfUF4OoJttsF7AKYmZmpbdu29VzZ0tq3bx9LUfM0zW10zdYj/OqBFfOj\ntizs8+p28PJtwNL9f16p+j4G0fIwcObY+rO6NknSCjJEQNwDnJPkrCRPA14J7BmgDknSPHoNiCS3\nAB8Bzk3yUJIrq+oI8Brg/cD9wK1V9YlFvu/2JLsOHZqe/fCSNG163WFYVZcdpf1O4M7jeN+9wN6Z\nmZmrjvU9JEnzG2IXkyRpChgQkqQmA0KS1DSVAeFBaknq31QGRFXtraodGzZsGLoUSVq1pjIgJEn9\nMyAkSU0GhCSpyYCQJDVNZUB4FpMk9W8qA8KzmCSpf1MZEJKk/hkQkqQmA0KS1GRASJKaDAhJUtNU\nBoSnuUpS/6YyIDzNVZL6N5UBIUnqnwEhSWoyICRJTQaEJKnJgJAkNa0buoBjkWQ7sH3z5s1Dl3LM\nNu28Y+gSJGleUzmC8DRXSerfVAaEJKl/BoQkqcmAkCQ1GRCSpCYDQpLUZEBIkpoMCElSkwEhSWqa\nyoDwhkGS1L+pDAivpJak/k1lQEiS+mdASJKaDAhJUpMBIUlqMiAkSU0GhCSpyYCQJDUZEJKkJgNC\nktRkQEiSmtYNXcCxSLId2L558+bBati0845jet01W49wxTG+VpKW01SOIJyLSZL6N5UBIUnqnwEh\nSWoyICRJTQaEJKnJgJAkNRkQkqQmA0KS1GRASJKaDAhJUpMBIUlqMiAkSU0GhCSpyYCQJDUZEJKk\nJgNCktS0Zm8YdKw3/JGk2d8fx3oDsIPXX7rUJfViKkcQ3jBIkvo3lQEhSeqfASFJajIgJElNBoQk\nqcmAkCQ1GRCSpCYDQpLUZEBIkppSVUPXcMySfB74TLe6ATg0Z5O5ba1tlttpwKMTbDdJrfa53TYt\nfZ60zrXW56Nts9b7vJT9/faqOn3BrapqVTyAXQu1tbYZoM79x9of+7y6+jxpnWutz0fbZq33eYj+\nrqZdTHsnaGtts1JNUqt9brdNS58nrXOt9flo26z1Pi97f6d6F9M0SrK/qmaGrmM52ee1wT6vPqtp\nBDEtdg1dwADs89pgn1cZRxCSpCZHEJKkJgNCktRkQEiSmgyIFSTJtiR/nOTGJNuGrmc5JHlO19/b\nkvzzoetZDknOTnJTktuGrqVPa6Wf41bbz7MBsUSSvC3J55LcN6f9kiQPJHkwyc4F3qaAw8BJwEN9\n1bpUlqLPVXV/VV0N/BhwYZ/1LoUl6vOnq+rKfivtx2L6P839HLfIPk/Vz/OChr4ScbU8gH8AnAfc\nN9Z2IvC/gLOBpwH/A9gCbAVun/P4VuCE7nUbgXcN3afl6HP3mpcAfwj8k6H7tFx97l5329D96bP/\n09zP4+nzNP08L/RYN3GSaF5V9eEkm+Y0fy/wYFV9GiDJbuClVfV64Afnebv/C3xjH3UupaXqc1Xt\nAfYkuQP43f4qPn5L/O88dRbTf+CTy1tdPxbb52n6eV6Iu5j6dQbwl2PrD3VtTUl+OMlbgHcCb+q5\ntr4sts/bktzQ9fvOvovryWL7/C1JbgS+J8nP913cMmj2fxX2c9zR+rwafp7/hiOIFaSq3gu8d+g6\nllNV7QP2DVzGsqqqLwBXD11H39ZKP8ettp9nRxD9ehg4c2z9WV3bamaf10afx63F/q+JPhsQ/boH\nOCfJWUmeBrwS2DNwTX2zz2ujz+PWYv/XRJ8NiCWS5BbgI8C5SR5KcmVVHQFeA7wfuB+4tao+MWSd\nS8k+r40+j1uL/V+LfZ7lZH2SpCZHEJKkJgNCktRkQEiSmgwISVKTASFJajIgJElNBoSWVZJfSPKJ\nJB9P8rEkL1hg+31JZhbY5uYkL2+0zyS5oVu+IsmbuuWrk/zkWPvfPvYeHb8k/ynJXye5fU77WUn+\ntJtO+ve6C7LIyA1d+8eTnLfIz7suyc/OaTuY5LQkZyb5oySf7P6d/uXYNklybZJPJfmzbru/ezx9\n18pmQGjZJLmA0eym51XVdwMX87UTni2pqtpfVa9ttN9YVe/oVq8Ali0gkrTmP/sV4Cca7b8MvKGq\nNjOa4Xf23govBs7pHjuA31rCEo8A11TVFuCFwKuTbOmeezXw94DnVtV3Aq9nNGvpSUv4+VpBDAgt\np28DHq2qrwBU1aNV9QhAkn+Y5KNJDnQ3aPm66c6THB5bfnmSm8eevjjJ/u6b7Q9222yb+628a78u\nyc92o44Z4F3daObSJO8b2+5FSX6/8fqDSf59V+vdSTZ37acneU+Se7rHhWOf984kf8Jopt6vUVX/\nGfjinM8I8APA7N3Y3g68rFt+KfCOGvlvwDOTfFv3un+T0U1s/kuSW+aOFBZSVX9VVf+9W/4io6uE\nZ2em/TngNVX1pe75DwD/Fbh8MZ+h6WFAaDl9ADiz+yX+m0m+H6D7Bnoz8Iqq2spoluHF3q5xE6M5\n+i8FbpzkW21V3QbsBy6vqucxmp752UlO7zZ5FfC2o7z8UFfrm4Bf79p+g9E3/ucDPwK8dWz7LcDF\nVXXZhP35FuCvuykd4GunED/aVNOzn/tcRqOM+XbN/asuFD+W5GM0RlEZ3QPhe4A/TXIqcMrs/Q/G\n7AfczbRKGRBaNlV1GDif0W6RzwO/l+QK4Fzgz6vqz7pN387oLl6LcWtVfbWqPgV8Gnj2MdRXjL7h\n/3iSZwIXMLozWMstY39e0C1fDLyp+4W7Bzg1yfruuT1V9cRia1qkC4E/qKovd9/+986z7Ruq6nmz\nD+CR8Se7ut8D/ExVPdZfyVrJvB+EllVVPcVovvx9SQ4APwV8dNKXjy3PHSHMnVTsWCcZ+21Gv1i/\nDLx77Bv8fLXMLp8AvLCqvjy+4WhvEY8vso4vMNp1tK6rYXw66V6nmk7yDYzC4V3dPUqoqseSPJ7k\n7DmjiPOBDy3VZ2tlcQShZZPk3CTnjDU9D/gM8ACwaXZfPqMDtq1fOp9N8pwkJwA/NOe5H01yQpLv\nYHSf4AcmLOuLwDNmV7pjIo8A1zIKi6N5xdifH+mWPwD89OwGSZ43YQ1fpxvN/BEwe3bWTwF/0C3v\nAX6yO6vohYx2d/0V8CfA9iQndSOARd/utDv2cRNwf1X92pynfwW4IcnJ3bYXA3+fKb+tpo7OEYSW\n03rgjd3umyPAg8COqvpyklcB7+7O8rkHuLHx+p3A7Yx2T+3v3m/WXwB3A6cCV3fvOUlNNzM6ZvEE\ncEG3G+hdwOlVdf88r/umJB8HvgLMHld4LfDmrn0d8GEmuKNakj9mtEtsfZKHgCur6v2MDgrvTvLv\nGI2ybupecifwjxn9/X2J0bESquqeJHuAjwOfBQ4Ahyb5SxhzIaOAPtDtKgN4XVXdCbwR+KbuuaeA\n/83o3tt97zrTQJzuW5ojo+slPlpVNx3l+YPATFU9uqyFTSDJ+qo6nOTpjAJqx+xZSdJiOYKQxiS5\nl9HxgmuGruUY7equWzgJeLvhoOPhCEKS1ORBaklSkwEhSWoyICRJTQaEJKnJgJAkNRkQkqSm/w+8\nG1AmOQ1fxgAAAABJRU5ErkJggg==\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x7f4968e5ce48>"
+       "<matplotlib.figure.Figure at 0x7f4968809b70>"
       ]
      },
      "metadata": {},
@@ -208,7 +208,7 @@
     }
    ],
    "source": [
-    "log_bins = np.logspace(-6, 4, num=10)\n",
+    "log_bins = np.logspace(-6, 4, num=20)\n",
     "df.solubility_per_100gH2O.hist(bins=log_bins)\n",
     "plt.xscale('log')\n",
     "plt.yscale('log')\n",
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -238,7 +238,7 @@
        "dict_keys(['H2O', 'acid', 'alk', 'EtOH', 'dil', 'HCl', 'bz', 'tol', 'CS2', 'ctc', 'chl', 'eth', 'xyl', 'ace', 'pyr', 'os', 'peth', 'MeOH', 'py', 'et', 'ct', 'conc', 'hc', 'bz.', 'HNO3', 'diox', 'hot', 'iodide', 'soln', '(exp)', 'NH4OH', 'cold', 'H', '2O', 'thf', 'aqua', 'regia', 'KCN', '2SO4', 'HOAc', 'CN', 'HF', 'NaOH', 'acids', 'KCNS', 'warm', 'NH', '4OH', 'CC4l', 'DMF', 'DMSO', 'sl', 'EtOh', 'reac', 'H2SO4', 'of', 'SO2', 'in', 'HF-HNO3', 'mixture', 'HNO3/HF', 'EtAc'])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false
    },
@@ -284,7 +284,7 @@
        "[(1257, 'H2O'), (715, 'EtOH'), (367, 'acid'), (170, 'eth'), (132, 'dil')]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
